feat: BalanceテーブルもIDで管理するように修正
